semantics/tests/parser/valid/parse_interface.fpl
interface Test {
    foo: Int

    init(foo: Int)

    fun getFoo(): Int
}
