semantics/tests/parser/invalid/parse_invalid_structure_with_missing_function_block.fpl
struct Test {
    pub fun getFoo(): Int
}
